Fri Feb 24 05:12:34 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.11svn

==================== 0.10 ====================

Fri Feb 24 04:57:20 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* Makefile.am:
	  - Fix distcheck problems introduced by gnome-doc-utils.

Fri Feb 24 03:06:43 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* NEWS:
	  - Bump to 0.10

Fri Feb 24 11:01:13 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	  - Help is now working. Big thanks to seb128 for the fix. (#330837)

Thu Feb 23 16:15:41 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* NEWS:
	  - First crack at NEWS for 0.10

Thu Feb 23 16:04:52 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/url_scraper/Makefile.am:
	* plugins/notification/Makefile.am:
	* plugins/dbus/Makefile.am:
	* src/fe-gnome/Makefile.am:
	  - Fix gconf schemas install

Thu Feb 23 16:00:24 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/notification/notification.c:
	  - Fix a couple warnings

Thu Feb 23 19:20:25 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	  - Avoid to set a empty title on the main window.

Wed Feb 22 15:45:44 MST 2006  Sven Stothoff <sven.strothoff@speicherland.com>

	* src/common/servlist.c:
	  - Allow ports to be specified with server:port in addition to
	    server/port

Tue Feb 21 19:49:24 MST 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/navigation-tree.c:
	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/connect-dialog.c:
	  - Update the connection status of the network when we disconnect.
	  - Reuse the currently selected network session if it is
	    disconnected. (#326464)

Tue Feb 21 17:04:42 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Remove obsolete comment.

Tue Feb 21 23:27:00 GMT 2006  Daniel Drake  <dsd@gentoo.org>

	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/navigation-tree.c: