@@ -1,3 +1,8 @@
+Fri Feb 24 15:09:56 MST 2006  Brian Pepple <bdpepple@gmail.com>
+
+	* plugins/autoaway/gscreensaver.c:
+	  - Update for new gnome-screensaver object ID.
+
 Fri Feb 24 05:12:34 MST 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* configure.ac:
